# indexical

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release-pr.yml
src/: domain.rs  lib.rs  map.rs  matrix.rs  pointer.rs  set.rs  test_utils.rs  vec.rs
src/bitset/: bitvec.rs  mod.rs  roaring.rs  rustc.rs  simd.rs
src/bitsets/: bv.rs  mod.rs  roar.rs  rustc.rs  simd.rs
src/impls/: bv.rs  mod.rs  roar.rs  rustc.rs  simd.rs
