[package]
name = "indexical"
version = "0.4.2"
edition = "2021"
description = "Utilities for indexed collections"
authors = [
  "Will Crichton <crichton.will@gmail.com>"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/willcrichton/indexical"

[package.metadata.rust-analyzer]
rustc_private = true

[package.metadata.docs.rs]
features = ["roaring"]

[features]
rustc = []
simd = []
roaring = ["dep:roaring"]
roaring-simd = ["roaring", "roaring/simd"]
bitvec = ["dep:bitvec", "dep:take_mut"]
default = ["bitvec"]

[dependencies]
bitvec = { version = "1.0.1", optional = true }
take_mut = { version = "0.2.2", optional = true }
fxhash = "0.2.1"
index_vec = "0.1.3"
splitmut = "0.2.1"
roaring = { version = "0.10.2", optional = true }