[package]
name = "indexical"
version = "0.10.2"
edition = "2024"
description = "Utilities for indexed collections"
authors = [
  "Will Crichton <crichton.will@gmail.com>"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/willcrichton/indexical"

[package.metadata.rust-analyzer]
rustc_private = true

[features]
rustc = []
simd = []
roaring = ["dep:roaring"]
roaring-simd = ["roaring", "roaring/simd"]
bitvec = ["dep:bitvec"]
default = ["bitvec"]
serde = ["dep:serde", "index_vec/serde"]

[dependencies]
bitvec = { version = "1.0.1", optional = true }
index_vec = "0.1.3"
roaring = { version = "0.11.2", optional = true }
rustc-hash = "2.1.1"
serde = { version = "1", features = ["rc", "derive"], optional = true }
